--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,7 +1,8 @@
 .container {
-	display: flex;
+	/*display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: center;*/
+	background-color: #f1f1f1;
 }
 
 .title {
@@ -10,8 +11,11 @@
 	justify-content: center;
 	padding-block: 0.5rem;
 	font-size: 1.2rem;
-	color: white;
-	background-color: rgb(59, 180, 76);
+	color: black;
+	/* color: white; */
+	/* background-color: rgb(59, 180, 76); */
+	background-color: #93ad18;
 	width: 100%;
 	overflow: hidden;
+	height: 70px;
 }
