--- a/src/components/dropdown/Dropdown.module.css
+++ b/src/components/dropdown/Dropdown.module.css
@@ -6,7 +6,8 @@
 	/* border-radius: 4px; */
 	border-radius: 0.35rem;
 	transition: border-color 0.3s;
-	font-size: clamp(1rem, 1.3vw, 1.3rem);
+	font-size: clamp(1.5rem, 1.7vw, 1.7rem);
+	/* font-size: clamp(1rem, 1.3vw, 1.3rem); */
 	/* font-size: clamp(1.8rem, 1.8vw, 1.8rem);  */
 	/* width: 100%; */
 	/* height: 4rem; */
