--- a/src/components/formEmployee/FormEmployee.module.css
+++ b/src/components/formEmployee/FormEmployee.module.css
@@ -2,12 +2,13 @@
 	border-radius: 10px;
 	box-shadow: 5px 2px 20px 10px rgba(0, 0, 0, 0.1);
 	display: flex;
-	height: 100%;
-	max-width: 950px;
-	width: 70%;
+	margin-top: 120px;
+	margin-left: 27px;
+	margin-right: 27px;
+	margin-bottom: 50px;
 }
 
-.formLfet {
+.formLeft {
 	align-items: center;
 	background-color: #73832c;
 	border-bottom-left-radius: 10px;
@@ -15,35 +16,39 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	padding: 20px;
 	width: 50%;
+	max-height: 900px;
 }
 
-.formLfet img {
-	max-height: 60%;
+.formLeft img {
+	/*max-height: 50%;
+	max-width: 100%;*/
 	max-width: 100%;
+	height: auto;
 }
 
-.formLfet p {
-	color: #fff;
+.formLeft p {
+	color: black;
+	padding: 10px;
+	font-size: clamp(1.8rem, 2vw, 2rem);
+	/* font-size: 1.8rem; */
 }
+
 .formRight {
 	display: flex;
 	flex-direction: column;
 	padding: 20px;
 	width: 50%;
+	max-height: 900px;
 }
+
 .formContainer {
 	display: flex;
 	justify-content: center;
-	/* padding: 4rem; */
 	padding: 2rem;
-	min-height: calc(100vh - 10rem);
 }
 
 .form {
-	/*position: relative;
-	margin-bottom: 24px;*/
 	display: flex;
 	flex-direction: column;
 	gap: 4rem;
@@ -52,41 +57,19 @@
 }
 
 .form fieldset {
-	/* width: 50%; */
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
 	width: 100%;
 	position: relative;
-	/* width: 70%; */
-	/* padding: 2rem; */
-	/* margin: 0 auto; */
-	/* border: 2px solid #157846; */
-	/* border: 3px solid #1b5c0c; */
-	/* border-radius: 0.5rem; */
-
 	border: none;
 	padding: 0;
 	margin: 0;
 }
 
-/*.form fieldset::after {
-	content: "";
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 1px;
-	background-color: black;
-}*/
-
 .formLegend {
-	/* font-size: clamp(2rem, 2.5vw, 2.5rem); */
-	font-size: clamp(1rem, 1.5vw, 1.5rem);
-	/* font-size: 1.5rem; */
+	font-size: clamp(1.8rem, 2vw, 2rem);
 	font-weight: 600;
-
-	/* font-weight: 900; */
 	margin-bottom: 1.6rem;
 	width: 100%;
 	display: flex;
@@ -114,17 +97,13 @@ form .dropdown {
 }
 
 label {
-	/*display: block;
-	margin-top: 1rem;
-	margin-bottom: 10px;*/
 	display: flex;
 	gap: 0.5rem;
-	/* font-size: clamp(1.8rem, 2vw, 2rem); */
-	font-size: clamp(1rem, 1.3vw, 1.3rem);
+	font-size: clamp(1.5rem, 1.7vw, 1.7rem);
 }
 
 .title {
-	font-size: 35px;
+	font-size: clamp(2.5rem, 2.8vw, 2.8rem);
 	font-weight: 900;
 	margin-bottom: 10px;
 	margin-top: 20px;
@@ -138,11 +117,7 @@ label {
 	background: linear-gradient(to right, #4d5540, #bfd3d5);
 	width: 100%;
 }
-/*
-.form label {
-	font-size: clamp(1.8rem, 2vw, 2rem);
-}
-*/
+
 .formGroupControl input {
 	width: 100%;
 	height: 4rem;
@@ -150,16 +125,10 @@ label {
 	/* padding: 0 1rem; */
 	padding: 5px 5px;
 	border: 1.75px solid #000;
-	font-size: clamp(1rem, 1.3vw, 1.3rem);
-	/* border-color: #007bff; */
+	font-size: clamp(1.5rem, 1.7vw, 1.7rem);
 	border-radius: 0.5rem;
-	/* font-size: clamp(1.8rem, 1.8vw, 1.8rem); */
 	transition: border-color 0.5s;
 }
-
-/*input:focus {
-	border-color: #007bff;
-}*/
 
 .formGroupControl input:focus {
 	border-color: #007bff;
@@ -183,61 +152,35 @@ label {
 .dropdownDept::before {
 	content: "";
 	position: absolute;
-	/*bottom: 70px;
-	left: 70px;
-	width: 80%;*/
-	/*height: 1px;
-	background-color: #000;*/
-
-	bottom: 78px;
-	left: 190px;
-	width: 50%;
-	height: 1.2px;
+	bottom: 80px;
+	left: 114px;
+	width: 60%;
+	height: 1.3px;
 	background-color: #625e4c;
 }
-/*.selectMenu {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	width: 100%;
-
-	width: 100%;
-
-	height: 3.5rem;
-
-	padding: 5px 5px;
-	border: 1.75px solid #000;
-	font-size: clamp(1rem, 1.3vw, 1.3rem);
-
-	border-radius: 0.5rem;
-
-	transition: border-color 0.5s;
-}*/
 
 .submitBtn {
 	cursor: pointer;
 	display: block;
 	margin-top: 2rem;
 	/* width: 50%; */
-	width: 35%;
+	width: 40%;
 	margin-inline: auto;
 	background-color: #93ad18;
 	/* color: #fff; */
 	color: black;
-	height: 3rem;
+	height: 4rem;
 	border-radius: 0.5rem;
 	border: none;
-	/* font-size: clamp(1.8rem, 2vw, 2rem); */
-	font-size: clamp(1rem, 1.3vw, 1.3rem);
+	font-size: clamp(1.8rem, 2vw, 2rem);
+	/* font-size: clamp(1rem, 1.3vw, 1.3rem); */
 	font-weight: 600;
 }
 
-/*.error {
-	color: red;
-	font-size: 0.875em;
-	margin-top: 0.25em;
+.submitBtn:hover {
+	/* background-color: #596521; */
+	background-color: #73832c;
 }
-*/
 
 .form .error {
 	color: #d41f4a;
@@ -248,6 +191,15 @@ label {
 
 /* Media queries */
 
+@media screen and (max-width: 1024px) {
+	.dropdownDept::before {
+		left: 90px;
+	}
+	.formLeft img {
+		width: 90%;
+	}
+}
+
 @media screen and (max-width: 790px) {
 	/*.form fieldset {
 		width: 80%;
@@ -257,17 +209,35 @@ label {
 		flex-direction: column;
 		gap: 1rem;
 	}
+
+	.formLeft {
+		display: none;
+	}
+	.formRight {
+		width: 100%;
+		max-height: 1180px;
+	}
+	.dropdownDept::before {
+		left: 120px;
+	}
 }
 
 @media screen and (max-width: 500px) {
 	.formContainer {
 		padding: 2rem 1rem;
 	}
+	.dropdownDept::before {
+		left: 43px;
+		width: 70%;
+	}
 }
 
 /*@media screen and (max-width: 430px) {
 	.formContainer {
 		padding: 2.2rem;
+		    left: 90px;
+			        left: 120px;
+    width: 60%;
 	}
 
 	.form {
