--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -3,6 +3,14 @@
 	flex-direction: column;
 	align-items: center;*/
 	background-color: #f1f1f1;
+	min-height: calc(100vh - 10rem);
+	padding-bottom: 100px;
+
+	/* align-items: center; */
+	/* display: flex; */
+	/* height: 100vh; */
+	/* justify-content: center; */
+	/* width: 100%; */
 }
 
 .title {
@@ -10,12 +18,23 @@
 	align-items: center;
 	justify-content: center;
 	padding-block: 0.5rem;
-	font-size: 1.2rem;
-	color: black;
+	/* font-size: 1.2rem; */
+	/*font-size: clamp(1.5rem, 2vw, 2rem);
+	color: black;*/
 	/* color: white; */
 	/* background-color: rgb(59, 180, 76); */
 	background-color: #93ad18;
 	width: 100%;
 	overflow: hidden;
 	height: 70px;
+}
+.title h1 {
+	font-size: clamp(3rem, 3.2vw, 3.2rem);
+	color: black;
+}
+
+@media screen and (max-width: 325px) {
+	.container {
+		width: 114%;
+	}
 }
