--- a/src/App.css
+++ b/src/App.css
@@ -32,43 +32,27 @@ html {
 header {
 	width: 100%;
 	font-size: 12px;
-	/* font-family: copperplate, "Roboto", "Arial"; */
 }
 
-/*
-.logo {
-	height: 6em;
-	padding: 1.5em;
-	will-change: filter;
-	transition: filter 300ms;
-}
-.logo:hover {
-	filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-	filter: drop-shadow(0 0 2em #61dafbaa);
+.react-datepicker-popper {
+	margin: -32px -5px;
 }
 
-@keyframes logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
-	to {
-		transform: rotate(360deg);
-	}
+.react-datepicker {
+	font-size: 1.2rem;
+	font-weight: 600;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-	a:nth-of-type(2) .logo {
-		animation: logo-spin infinite 20s linear;
-	}
+.react-datepicker__header {
+	background: linear-gradient(to right, #4d5540, #bfd3d5);
+	border-bottom: 1.5px solid #73832c;
 }
 
-.card {
-	padding: 2em;
+.react-datepicker__header button {
+	width: 20px;
+	border: 1px solid;
 }
 
-.read-the-docs {
-	color: #888;
+.react-datepicker__header select {
+	width: 50%;
 }
-*/
