--- a/src/App.css
+++ b/src/App.css
@@ -10,19 +10,35 @@
 
 #root {
 	/* max-width: 1280px; */
-	max-width: 1440px;
-	margin: 0 auto;
 	/* padding: 2rem; */
+	max-width: 1440px;
+	width: 100%;
+	/*margin: 0 auto;
+
 	text-align: center;
-	height: 100%;
+	height: 100%;*/
+
+	/*max-width: 1200px;
+	padding: 20px;
+	background-color: #fff;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	border-radius: 8px;*/
 }
 * {
 	font-family: copperplate, "Roboto", "Arial";
 }
 
 body {
-	height: 100vh;
-	width: 100%;
+	/*height: 100vh;
+	width: 100%;*/
+
+	/* background-color: #f4f4f4; */
+	/* color: #333; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	line-height: 1.6;
 }
 
 html {
@@ -31,9 +47,12 @@ html {
 
 header {
 	width: 100%;
-	font-size: 12px;
+	/* font-size: 12px; */
 }
 
+a {
+	text-decoration: none;
+}
 .react-datepicker-popper {
 	margin: -32px -5px;
 }
@@ -56,3 +75,16 @@ header {
 .react-datepicker__header select {
 	width: 50%;
 }
+
+/*@media screen and (max-width: 500px) {
+	header {
+		width: 147%;
+	}
+}
+
+@media screen and (max-width: 375px) {
+	header {
+		width: 165%;
+	}
+}
+*/
