--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -48,7 +48,7 @@ p {
 
 .footerTitle {
 	color: #635e5e;
-	font-size: 24px;
+	font-size: 1.8rem;
 	/* font-weight: 400; */
 	/* font-family: 'Arial', sans-serif; */
 	margin: 0 0 16px;
@@ -62,7 +62,7 @@ p {
 }
 
 .copyright {
-	font-size: 18px;
+	font-size: 1.2rem;
 	font-weight: 500;
 	color: rgb(60, 56, 56);
 	text-align: center;
@@ -72,7 +72,6 @@ p {
 .footerList {
 	list-style-type: none;
 	padding: 0;
-
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -92,7 +91,7 @@ p {
 
 .footerListLi a {
 	color: #534e4e;
-	font-size: 21px;
+	font-size: 1.5rem;
 	font-weight: 500;
 	text-decoration: none;
 }
@@ -100,6 +99,7 @@ p {
 @media screen and (max-width: 500px) {
 	.footerList {
 		flex-direction: column;
+		gap: 6px;
 	}
 }
 
