--- a/src/components/formEmployee/FormEmployee.module.css
+++ b/src/components/formEmployee/FormEmployee.module.css
@@ -2,10 +2,11 @@
 	border-radius: 10px;
 	box-shadow: 5px 2px 20px 10px rgba(0, 0, 0, 0.1);
 	display: flex;
-	margin-top: 120px;
+	/* margin-top: 120px; */
 	margin-left: 27px;
 	margin-right: 27px;
 	margin-bottom: 50px;
+	margin-top: 79px;
 }
 
 .formLeft {
