--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -5,6 +5,7 @@
 	background-color: #f1f1f1;
 	min-height: calc(100vh - 10rem);
 	padding-bottom: 100px;
+	border-top: 2px solid #6c6753;
 
 	/* align-items: center; */
 	/* display: flex; */
@@ -29,8 +30,15 @@
 	height: 70px;
 }
 .title h1 {
-	font-size: clamp(3rem, 3.2vw, 3.2rem);
+	/* font-size: clamp(3rem, 3.2vw, 3.2rem); */
+	font-size: 3rem;
 	color: black;
+}
+
+@media screen and (max-width: 500px) {
+	.title h1 {
+		font-size: 2.4rem;
+	}
 }
 
 @media screen and (max-width: 325px) {
