--- a/src/components/dateSelector/DateSelector.module.css
+++ b/src/components/dateSelector/DateSelector.module.css
@@ -2,10 +2,12 @@
 
 .datePicker {
 	width: 100%;
-	padding: 8px;
+	/* padding: 8px; */
+	padding: 0.5rem;
 	border: 1px solid #ccc;
 	border-radius: 4px;
-	font-size: 16px;
+	/* font-size: 16px; */
+	font-size: 1rem;
 }
 
 .datePicker:focus {
