--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -3,57 +3,46 @@
 	justify-content: space-between;
 	align-items: center;
 	border-top: 2px solid #6c6753;
-	padding: 22px 25px;
+	/* padding: 22px 25px; */
+	padding: 1.4rem 1.6rem;
 }
-
-/*.footerTitle {
-	color: #635e5e;
-	font-size: 1.8rem;
-	margin: 0 0 16px;
-	padding-right: 0;
-}*/
 
 .copyright {
 	font-size: 1.5rem;
-	font-weight: 500;
+	font-weight: 600;
 	color: rgb(60, 56, 56);
-	/*text-align: center;
-	padding-left: 20px;
-	padding-top: 20px;*/
 }
 .footerList {
 	list-style-type: none;
-	/* padding: 0; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* flex-direction: row; */
-	gap: 15px;
+	/* gap: 15px; */
+	gap: 1rem;
 }
 
 .footerListLi {
-	margin-top: 7px;
+	/* margin-top: 7px; */
+	margin-top: 0.5rem;
 }
 
 .footerListLi a {
 	color: #534e4e;
 	font-size: 1.5rem;
-	font-weight: 500;
+	font-weight: 600;
 	text-decoration: none;
 }
 
 @media screen and (max-width: 500px) {
-	/*.footerList {
-		flex-direction: column;
-		gap: 6px;
-	}*/
 	.footer {
 		flex-direction: column;
-		gap: 10px;
+		/* gap: 10px; */
+		gap: 0.65rem;
 	}
 
 	.footerListLi {
-		margin-top: 2px;
+		/* margin-top: 2px; */
+		margin-top: 0.13rem;
 	}
 
 	.footerListLi a {
