--- a/src/components/formEmployee/FormEmployee.module.css
+++ b/src/components/formEmployee/FormEmployee.module.css
@@ -2,11 +2,11 @@
 	border-radius: 10px;
 	box-shadow: 5px 2px 20px 10px rgba(0, 0, 0, 0.1);
 	display: flex;
-	/* margin-top: 120px; */
 	margin-left: 27px;
 	margin-right: 27px;
 	margin-bottom: 50px;
 	margin-top: 79px;
+	/* margin: 1.688rem 1.688rem 3.125rem 4.938rem; */
 }
 
 .formLeft {
@@ -22,8 +22,6 @@
 }
 
 .formLeft img {
-	/*max-height: 50%;
-	max-width: 100%;*/
 	max-width: 100%;
 	height: auto;
 }
@@ -31,14 +29,15 @@
 .formLeft p {
 	color: black;
 	padding: 10px;
-	font-size: clamp(1.8rem, 2vw, 2rem);
-	/* font-size: 1.8rem; */
+	/* font-size: clamp(1.8rem, 2vw, 2rem); */
+	font-size: 1.8rem;
 }
 
 .formRight {
 	display: flex;
 	flex-direction: column;
 	padding: 20px;
+	/* padding: 1.25rem; */
 	width: 50%;
 	max-height: 900px;
 }
@@ -69,7 +68,8 @@
 }
 
 .formLegend {
-	font-size: clamp(1.8rem, 2vw, 2rem);
+	/* font-size: clamp(1.8rem, 2vw, 2rem); */
+	font-size: 1.8rem;
 	font-weight: 600;
 	margin-bottom: 1.6rem;
 	width: 100%;
@@ -100,20 +100,22 @@ form .dropdown {
 label {
 	display: flex;
 	gap: 0.5rem;
-	font-size: clamp(1.5rem, 1.7vw, 1.7rem);
+	/* font-size: clamp(1.5rem, 1.7vw, 1.7rem); */
+	font-size: 1.5rem;
 }
 
 .title {
-	font-size: clamp(2.5rem, 2.8vw, 2.8rem);
+	/* font-size: clamp(2.5rem, 2.8vw, 2.8rem); */
+	font-size: 2.5rem;
 	font-weight: 900;
 	margin-bottom: 10px;
 	margin-top: 20px;
+	/*margin-bottom: 0.625rem;
+	margin-top: 1.25rem;*/
 }
 
 .horizontalBar {
 	margin-left: 0.4rem;
-	/* height: 0.8rem; */
-	/* background: linear-gradient(to right, #daf7a6, powderblue); */
 	height: 0.5rem;
 	background: linear-gradient(to right, #4d5540, #bfd3d5);
 	width: 100%;
@@ -122,11 +124,11 @@ label {
 .formGroupControl input {
 	width: 100%;
 	height: 4rem;
-	/* height: 2.5rem; */
-	/* padding: 0 1rem; */
 	padding: 5px 5px;
+	/* padding: 0.31rem 0.31rem; */
 	border: 1.75px solid #000;
-	font-size: clamp(1.5rem, 1.7vw, 1.7rem);
+	/* font-size: clamp(1.5rem, 1.7vw, 1.7rem); */
+	font-size: 1.5rem;
 	border-radius: 0.5rem;
 	transition: border-color 0.5s;
 }
@@ -140,6 +142,7 @@ label {
 
 .address {
 	margin-top: 10px;
+	/* margin-top: 0.625px; */
 }
 
 .dropdownDept {
@@ -164,22 +167,21 @@ label {
 	cursor: pointer;
 	display: block;
 	margin-top: 2rem;
-	/* width: 50%; */
 	width: 40%;
 	margin-inline: auto;
 	background-color: #93ad18;
-	/* color: #fff; */
+
 	color: black;
 	height: 4rem;
 	border-radius: 0.5rem;
 	border: none;
-	font-size: clamp(1.8rem, 2vw, 2rem);
+	font-size: 1.8rem;
+	/* font-size: clamp(1.8rem, 2vw, 2rem); */
 	/* font-size: clamp(1rem, 1.3vw, 1.3rem); */
 	font-weight: 600;
 }
 
 .submitBtn:hover {
-	/* background-color: #596521; */
 	background-color: #73832c;
 }
 
@@ -187,7 +189,8 @@ label {
 	color: #d41f4a;
 	/* font-weight: 600; */
 	/* font-size: clamp(1.6rem, 1.6vw, 1.6rem); */
-	font-size: clamp(1rem, 1.3vw, 1.3rem);
+	/* font-size: clamp(1rem, 1.3vw, 1.3rem); */
+	font-size: 1rem;
 }
 
 /* Media queries */
@@ -202,9 +205,6 @@ label {
 }
 
 @media screen and (max-width: 790px) {
-	/*.form fieldset {
-		width: 80%;
-	}*/
 	.formGroup {
 		display: flex;
 		flex-direction: column;
@@ -232,31 +232,3 @@ label {
 		width: 70%;
 	}
 }
-
-/*@media screen and (max-width: 430px) {
-	.formContainer {
-		padding: 2.2rem;
-		    left: 90px;
-			        left: 120px;
-    width: 60%;
-	}
-
-	.form {
-		width: 90%;
-	}
-	.form fieldset {
-		
-		width: 125%;
-		margin: 0px -33px;
-		padding: 1rem;
-	}
-}*/
-
-/*.customDatepicker .react-datepicker__tab-loop .react-datepicker-popper {
-	position: absolute;
-	left: 0px;
-	top: 0px;
-	transform: translate(200px, 210.5px);
-	will-change: transform;
-}
-*/
