--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"); */
 
 *,
 ::before,
@@ -9,31 +9,14 @@
 }
 
 #root {
-	/* max-width: 1280px; */
-	/* padding: 2rem; */
 	max-width: 1440px;
 	width: 100%;
-	/*margin: 0 auto;
-
-	text-align: center;
-	height: 100%;*/
-
-	/*max-width: 1200px;
-	padding: 20px;
-	background-color: #fff;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	border-radius: 8px;*/
 }
 * {
 	font-family: copperplate, "Roboto", "Arial";
 }
 
 body {
-	/*height: 100vh;
-	width: 100%;*/
-
-	/* background-color: #f4f4f4; */
-	/* color: #333; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -47,7 +30,6 @@ html {
 
 header {
 	width: 100%;
-	/* font-size: 12px; */
 }
 
 a {
@@ -75,16 +57,3 @@ a {
 .react-datepicker__header select {
 	width: 50%;
 }
-
-/*@media screen and (max-width: 500px) {
-	header {
-		width: 147%;
-	}
-}
-
-@media screen and (max-width: 375px) {
-	header {
-		width: 165%;
-	}
-}
-*/
