--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -40,3 +40,7 @@
 	justify-content: center;
 	align-items: center;
 }
+
+.modalOpen {
+	overflow: hidden; /* Empêche le défilement de la page derrière le modal */
+}
